Make the AOT solution serve some beer

--- a/WebServerDemo.NativeAot/Properties/launchSettings.json
+++ b/WebServerDemo.NativeAot/Properties/launchSettings.json
@@ -4,9 +4,8 @@
     "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "todos",
-      "applicationUrl": "http://localhost:5028",
+      "launchBrowser": false,
+      "applicationUrl": "http://localhost:5122",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
